# dhall-to-cabal

./: .gitignore  dhall-to-etlas.cabal  dhall-to-etlas.dhall  stack.yaml
cabal-to-dhall/: Main.hs
dhall/: GithubSourceRepo-project.dhall
dhall/defaults/: BuildInfo.dhall  CompilerOptions.dhall  Executable.dhall  Package.dhall  SourceRepo.dhall
dhall/types/: Benchmark.dhall  BuildInfo.dhall  Compiler.dhall  CompilerOptions.dhall  Executable.dhall  Extension.dhall  ForeignLibrary.dhall  Library.dhall  License.dhall  SourceRepo.dhall  TestSuite.dhall
exe/: Main.hs
golden-tests/: GoldenTests.hs  dhall-to-etlas.cabal  wai-servlet.cabal  wai-servlet.dhall
golden-tests/cabal-to-dhall/: benchmark.dhall  conditional-dependencies.dhall  default-license-2.2.dhall  executable.dhall  gh-36.dhall  mixins-no-signatures.dhall  otheros.dhall  simple.dhall  sourcerepo-defaults.dhall
golden-tests/dhall-to-cabal/: allrightsreserved-2.0.cabal  allrightsreserved-2.2.cabal  compiler-options-order.cabal  conditional-dependencies.cabal  default-license-2.2.cabal  dhall-to-etlas.cabal  dhall-to-etlas.dhall  empty-package.cabal  gh-53.cabal  gh-55.cabal  github-source-repo.cabal  github-source-repo.dhall  map-source-repo.cabal  mixins-no-signatures.cabal  nested-conditions.cabal  wai-servlet-handler-jetty.cabal  wai-servlet-handler-jetty.dhall  wai-servlet.cabal  wai-servlet.dhall  wai-servlet.hashed.dhall  wai-servlet.http.cabal  wai-servlet.http.dhall
lib/: CabalToDhall.hs  DhallLocation.hs  DhallToCabal.hs
lib/Dhall/: Extra.hs
lib/DhallToCabal/: Diff.hs
