name: dhall-to-etlas
version: 1.0.0
cabal-version: 1.12
build-type: Simple
license: MIT
license-file: LICENSE
maintainer: atreyu.bbb@gmail.com
homepage: https://github.com/eta-lang/dhall-to-etlas
bug-reports: https://github.com/eta-lang/dhall-to-etlas/issues
synopsis: Compile Dhall expressions to Etlas files
description:
    dhall-to-etlas takes Dhall expressions and compiles them into Etlas 
    files. All of the features of Dhall are supported, such as let
    bindings and imports, and all features of Etlas are supported 
    .
category: Distribution
author: Ollie Charles <ollie@ocharles.org.uk>
extra-source-files:
    Changelog.md
    README.md
    dhall/defaults/BuildInfo.dhall
    dhall/defaults/Library.dhall
    dhall/defaults/CompilerOptions.dhall
    dhall/defaults/SourceRepo.dhall
    dhall/defaults/TestSuite.dhall
    dhall/defaults/Executable.dhall
    dhall/defaults/Package.dhall
    dhall/defaults/Benchmark.dhall
    dhall/unconditional.dhall
    dhall/GitHub-project.dhall
    dhall/prelude.dhall
    dhall/types/VersionRange.dhall
    dhall/types/OS.dhall
    dhall/types/Guarded.dhall
    dhall/types/License.dhall
    dhall/types/Library.dhall
    dhall/types/Version.dhall
    dhall/types/Language.dhall
    dhall/types/Extension.dhall
    dhall/types/CompilerOptions.dhall
    dhall/types/SourceRepo.dhall
    dhall/types/TestSuite.dhall
    dhall/types/Executable.dhall
    dhall/types/Dependency.dhall
    dhall/types/Mixin.dhall
    dhall/types/Compiler.dhall
    dhall/types/Config.dhall
    dhall/types/Package.dhall
    dhall/types/builtin.dhall
    dhall/types/BuildType.dhall
    dhall/types/RepoKind.dhall
    dhall/types/Version/v.dhall
    dhall/types/Arch.dhall
    dhall/types/Scope.dhall
    dhall/types/CustomSetup.dhall
    dhall/types/Benchmark.dhall
    dhall/types/Flag.dhall
    dhall/types/ForeignLibrary.dhall
    dhall/types/ModuleRenaming.dhall
    dhall/types/RepoType.dhall
    dhall/types/TestType.dhall
    dhall/types/VersionRange/IntersectVersionRanges.dhall
    dhall/types/VersionRange/WithinVersion.dhall
    dhall/types/VersionRange/InvertVersionRange.dhall
    dhall/types/VersionRange/EarlierVersion.dhall
    dhall/types/VersionRange/DifferenceVersionRanges.dhall
    dhall/types/VersionRange/ThisVersion.dhall
    dhall/types/VersionRange/OrLaterVersion.dhall
    dhall/types/VersionRange/OrEarlierVersion.dhall
    dhall/types/VersionRange/AnyVersion.dhall
    dhall/types/VersionRange/NotThisVersion.dhall
    dhall/types/VersionRange/LaterVersion.dhall
    dhall/types/VersionRange/NoVersion.dhall
    dhall/types/VersionRange/MajorBoundVersion.dhall
    dhall/types/VersionRange/UnionVersionRanges.dhall
    dhall/types/SetupBuildInfo.dhall
    golden-tests/dhall-to-cabal/*.dhall
    golden-tests/dhall-to-cabal/*.cabal
    golden-tests/cabal-to-dhall/*.dhall
    golden-tests/cabal-to-dhall/*.cabal

source-repository head
    type: git
    location: https://github.com/eta-lang/dhall-to-etlas

library
    exposed-modules:
        DhallToCabal
        CabalToDhall
    build-depends:
        etlas-cabal               >= 1.3.0.0  && < 1.4,
        base                      >= 4.5      && < 5,
        bytestring                >= 0.10     && < 1,
        containers                >= 0.5      && < 0.6,
        dhall                     >= 1.13.0   && < 1.14,
        formatting                >= 6.3.1    && < 6.4,
        hashable                  >= 1.2.6.1  && < 1.3,
        insert-ordered-containers >= 0.2.1.0  && < 0.3,
        text                      >= 1.2      && < 1.3,
        transformers              >= 0.2.0.0  && < 0.6,
        megaparsec                >= 6.1.1    && < 6.5 ,
        vector                    >= 0.11.0.0 && < 0.13
    default-language: Haskell2010
    other-extensions: GADTs GeneralizedNewtypeDeriving
                      LambdaCase OverloadedStrings RecordWildCards
    hs-source-dirs: lib
    other-modules:
        DhallToCabal.ConfigTree
        DhallToCabal.Diff
        Dhall.Extra
    ghc-options: -Wall

executable  dhall-to-etlas
    main-is: Main.hs
    build-depends:
        etlas-cabal               >= 1.3.0.0 && < 1.4,
        base                      >= 4.5     && < 5,
        dhall                     >= 1.13.0  && < 1.14,
        dhall-to-etlas            -any,
        optparse-applicative      >= 0.13.2  && < 0.15,
        prettyprinter             >= 1.2.0.1 && < 1.3,
        text                      >= 1.2     && < 1.3,
        transformers              >= 0.2.0.0 && < 0.6
    default-language: Haskell2010
    other-extensions: NamedFieldPuns
    hs-source-dirs: exe

executable  etlas-to-dhall
    main-is: Main.hs
    build-depends:
        etlas-cabal               >= 1.3.0.0 && < 1.4,
        base                      >= 4.5     && < 5,
        dhall                     >= 1.13.0  && < 1.14,
        dhall-to-etlas            -any,
        optparse-applicative      >= 0.13.2  && < 0.15,
        prettyprinter             >= 1.2.0.1 && < 1.3,
        text                      >= 1.2     && < 1.3,
        contravariant             >= 1.4     && < 1.5,
        hashable                  >= 1.2.6.1 && < 1.3,
        insert-ordered-containers >= 0.2.1.0 && < 0.3
    default-language: Haskell2010
    other-extensions: NamedFieldPuns
    hs-source-dirs: cabal-to-dhall

test-suite  golden-tests
    type: exitcode-stdio-1.0
    main-is: GoldenTests.hs
    build-depends:
        etlas-cabal               >= 1.3.0.0 && < 1.4,
        base                      >= 4.5     && < 5,
        Diff                      >= 0.3.4   && < 0.4,
        bytestring                >= 0.10    && < 1,
        dhall-to-etlas            -any,
        filepath                  >=1.4      && < 1.5,
        tasty                     >=0.11     && < 0.12,
        tasty-golden              >=2.3      && < 2.4,
        text                      >=1.2      && < 1.3
    default-language: Haskell2010
    hs-source-dirs: golden-tests

