cabal-version: 1.12
build-type: Simple               
name: Name
version: 1
license: UnspecifiedLicense

library
    exposed-modules:
        Module1
    
    if impl(ghc >=7.1.3)
        exposed-modules:
            Module2
        cpp-options: -DCOND1
        other-modules:
            OtherModule

