cabal-version: 1.12
build-type: Simple
name: repo
version: 1.0.0
license: UnspecifiedLicense
homepage: https://github.com/owner/repo
bug-reports: https://github.com/owner/repo/issues

source-repository this
    type: git
    location: https://github.com/owner/repo
    tag: 1.0.0

executable foo
    main-is: Main.hs
