name:                wai-servlet-handler-jetty
version:             0.1.2.0
description:
    Wai handler to run wai applications in a embedded jetty server
license:             BSD3
license-file:        LICENSE
author:              Javier Neira Sanchez
maintainer:          Javier Neira Sanchez <atreyu.bbb@gmail.com>
homepage:            https://github.com/jneira/wai-servlet-handler-jetty
bug-reports:         https://github.com/jneira/wai-servlet-handler-jetty/issues
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       1.12
stability:           Experimental
                     
source-repository this
  type:              git
  location:          https://github.com/jneira/wai-servlet-handler-jetty 
  tag:               0.1.2.0 
                     
library
  exposed-modules:     Network.Wai.Servlet.Handler.Jetty
  build-depends:       base >=4.8 && <4.9
                     , wai
                     , wai-servlet >= 0.1.5
  hs-source-dirs:      src
  default-language:    Haskell2010
  maven-depends:       javax.servlet:javax.servlet-api:3.1.0
                     , org.eclipse.jetty:jetty-server:9.4.5.v20170502

executable wai-servlet-jetty-example
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9
                     , wai
                     , wai-servlet >= 0.1.5
                     , wai-servlet-handler-jetty
  hs-source-dirs:      examples
  default-language:    Haskell2010
  
